# chatwork-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: file.rs  message.rs
src/: client.rs  error.rs  file.rs  lib.rs  macros.rs  serde.rs
src/v2/: contacts.rs  incoming_requests.rs  me.rs  mod.rs
src/v2/my/: mod.rs  status.rs  tasks.rs
src/v2/rooms/: files.rs  link.rs  members.rs  mod.rs
src/v2/rooms/messages/: mod.rs  read.rs  unread.rs
src/v2/rooms/tasks/: mod.rs  status.rs
