[package]
name = "chatwork"
version = "0.1.0"
authors = ["mechiru <u9053u6d41@gmail.com>"]
edition = "2018"

[dev-dependencies]
tokio = { version = "1.4", features = ["rt-multi-thread", "macros"] }

[dependencies]
thiserror = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = { version = "0.7" }
reqwest = { version = "0.11", features = ["gzip", "json", "multipart"] }

[features]
default = ["reqwest/default"]
trust-dns = ["reqwest/trust-dns"]
rustls-tls = ["reqwest/rustls-tls"]
