[package]
name = "chatwork"
version = "0.1.0"
authors = ["mechiru <u9053u6d41@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Chatwork API client."
repository = "https://github.com/mechiru/chatwork-rs"
documentation = "https://docs.rs/chatwork-rs"
categories = ["api-bindings"]
keywords = ["chatwork", "chat"]
readme = "README.md"

[dev-dependencies]
tokio = { version = "1.4", features = ["rt-multi-thread", "macros"] }

[dependencies]
thiserror = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = { version = "0.7" }
reqwest = { version = "0.11", features = ["gzip", "json", "multipart"] }

[features]
default = ["reqwest/default"]
rustls-tls = ["reqwest/rustls-tls"]
trust-dns = ["reqwest/trust-dns"]
